objects/ssot__GiftTransactionDesignation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DesignationAmount__c</fullName>
        <label>DesignationAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GiftDesignationId__c</fullName>
        <label>Gift Designation</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftTransactionId__c</fullName>
        <label>GiftTransaction</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Gift Transaction Designation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Percent__c</fullName>
        <label>Gift Transaction Designation Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761239924_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftTransactionDesignation_GiftDesig_rel</label>
        <referenceTo>ssot__GiftDesignation__dlm</referenceTo>
        <relationshipLabel>GiftTransactionDesignation_GiftDesig_rel</relationshipLabel>
        <relationshipName>rel_1697761239924_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761240030_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftTransactionDesignation_GiftTrans_rel</label>
        <referenceTo>ssot__GiftTransaction__dlm</referenceTo>
        <relationshipLabel>GiftTransactionDesignation_GiftTrans_rel</relationshipLabel>
        <relationshipName>rel_1697761240030_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>